syntax = "proto3";

package lab;
option java_package="org.linuxalert.lab";
//option java_multiple_files = true;
option java_outer_classname = "proto";


message RequestData {
    string prefix = 1;
    int32 list_length = 2;
}

message ResponseData {
    string my_string = 1;
    int32 my_int = 2;
    repeated SubRecord my_list = 3;
}

message SubRecord {
    string my_string = 1;
    int32 my_int = 2;
}


service Service {
    rpc Query (RequestData) returns (ResponseData) {};
}
